# vectorscan-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
vectorscan-rs/: Cargo.toml  README.md
vectorscan-rs-sys/: Cargo.toml  LICENSE-MIT  README.md  build.rs  vectorscan.patch
vectorscan-rs-sys/vectorscan/: .clang-tidy  .gitmodules  CHANGELOG-vectorscan.md  CMakeLists.txt  Contributors-vectorscan.md  README.md  cppcheck-suppression-list.txt  libhs.pc.in
vectorscan-rs-sys/vectorscan/benchmarks/: CMakeLists.txt  benchmarks.cpp  benchmarks.hpp
vectorscan-rs-sys/vectorscan/cmake/: archdetect.cmake  build_wrapper.sh  cflags-generic.cmake  cflags-ppc64le.cmake  cflags-x86.cmake  compiler.cmake  osdetection.cmake  pcre.cmake  simde.cmake  sqlite3.cmake
vectorscan-rs-sys/vectorscan/doc/dev-reference/: CMakeLists.txt  chimera.rst  compilation.rst  conf.py.in  getting_started.rst  index.rst  intro.rst  performance.rst  preface.rst  runtime.rst  serialization.rst  tools.rst
vectorscan-rs-sys/vectorscan/examples/: patbench.cc  pcapscan.cc  simplegrep.c
vectorscan-rs-sys/vectorscan/scripts/: change_command.py
vectorscan-rs-sys/vectorscan/src/: crc32.c  database.h  dispatcher.c  hs.cpp  hs_valid_platform.c  runtime.c  scratch.c  scratch.h  stream_compress_impl.h  ue2common.h
vectorscan-rs-sys/vectorscan/src/compiler/: asserts.cpp  compiler.cpp  error.cpp
vectorscan-rs-sys/vectorscan/src/fdr/: fdr.c  fdr_compile.cpp  fdr_compile_util.cpp  fdr_confirm.h  fdr_confirm_compile.cpp  fdr_confirm_runtime.h  fdr_dump.cpp  fdr_engine_description.cpp  flood_compile.cpp  flood_runtime.h  teddy.cpp  teddy.h  teddy_compile.cpp  teddy_engine_description.cpp  teddy_engine_description.h  teddy_fat.cpp  teddy_runtime_common.h
vectorscan-rs-sys/vectorscan/src/hwlm/: hwlm.c  hwlm_build.cpp  hwlm_dump.cpp  noodle_build.cpp  noodle_engine_sve.hpp
vectorscan-rs-sys/vectorscan/src/nfa/: accel.c  accel.h  accel_dfa_build_strat.cpp  accel_dump.cpp  accelcompile.cpp  castle.c  castle_dump.cpp  castlecompile.cpp  dfa_min.cpp  gough.c  gough_internal.h  goughcompile.cpp  goughcompile_accel.cpp  goughcompile_dump.cpp  goughcompile_reg.cpp  goughdump.cpp  lbr.c  lbr_common_impl.h  lbr_dump.cpp  limex.h  limex_common_impl.h  limex_compile.cpp  limex_dump.cpp  limex_exceptional.h  limex_internal.h  limex_runtime_impl.h  mcclellan_common_impl.h  mcclellan_internal.h  mcclellancompile.cpp  mcclellancompile_util.cpp  mcclellandump.cpp  mcsheng_compile.cpp  mcsheng_dump.cpp  mpv.c  mpv_dump.cpp  mpv_internal.h  mpvcompile.cpp  nfa_api_queue.h  nfa_api_util.h  nfa_build_util.cpp  (+28 more)
vectorscan-rs-sys/vectorscan/src/nfagraph/: ng.cpp  ng_anchored_dots.cpp  ng_asserts.cpp  ng_calc_components.cpp  ng_depth.cpp  ng_edge_redundancy.cpp  ng_equivalence.cpp  ng_expr_info.cpp  ng_extparam.cpp  ng_fixed_width.cpp  ng_fuzzy.cpp  ng_haig.cpp  ng_holder.h  ng_is_equal.cpp  ng_lbr.cpp  ng_lbr_sve.hpp  ng_limex.cpp  ng_limex_accel.cpp  ng_literal_analysis.cpp  ng_literal_analysis.h  ng_literal_component.cpp  ng_literal_decorated.cpp  ng_mcclellan.cpp  ng_mcclellan_internal.h  ng_misc_opt.cpp  ng_netflow.cpp  ng_prune.cpp  ng_puff.cpp  ng_redundancy.cpp  ng_region.cpp  ng_region.h  ng_region_redundancy.cpp  ng_repeat.cpp  ng_reports.cpp  ng_restructuring.cpp  ng_sep.cpp  ng_small_literal_set.cpp  ng_som.cpp  ng_som_add_redundancy.cpp  ng_som_util.cpp  (+6 more)
vectorscan-rs-sys/vectorscan/src/parser/: ComponentAlternation.cpp  ComponentAssertion.cpp  ComponentAtomicGroup.cpp  ComponentBoundary.cpp  ComponentCondReference.cpp  ComponentRepeat.cpp  ComponentSequence.cpp  Parser.cpp  Parser.rl  buildstate.cpp  control_verbs.cpp  control_verbs.rl  logical_combination.cpp  parse_error.h  position_info.h  prefilter.cpp  ucp_table.cpp  ucp_table.h  utf8_validate.cpp
vectorscan-rs-sys/vectorscan/src/rose/: block.c  catchup.c  counting_miracle.h  match.c  match.h  program_runtime.c  rose_build_add.cpp  rose_build_add_mask.cpp  rose_build_anchored.cpp  rose_build_anchored.h  rose_build_bytecode.cpp  rose_build_castle.cpp  rose_build_compile.cpp  rose_build_convert.cpp  rose_build_dedupe.cpp  rose_build_dump.cpp  rose_build_engine_blob.h  rose_build_exclusive.cpp  rose_build_groups.cpp  rose_build_impl.h  rose_build_instructions.h  rose_build_lit_accel.cpp  rose_build_long_lit.cpp  rose_build_lookaround.cpp  rose_build_matchers.cpp  rose_build_matchers.h  rose_build_merge.cpp  rose_build_merge.h  rose_build_misc.cpp  rose_build_program.cpp  rose_build_program.h  rose_build_role_aliasing.cpp  rose_build_scatter.cpp  rose_build_width.cpp  rose_in_graph.h  rose_internal.h  stream.c  stream_long_lit.h
vectorscan-rs-sys/vectorscan/src/smallwrite/: smallwrite_build.cpp  smallwrite_internal.h
vectorscan-rs-sys/vectorscan/src/som/: slot_manager.cpp  slot_manager_dump.cpp  slot_manager_internal.h  som_runtime.c  som_stream.c
vectorscan-rs-sys/vectorscan/src/util/: alloc.cpp  alloc.h  arch.h  bitfield.h  bitutils.h  bytecode_ptr.h  clique.cpp  depth.h  determinise.h  dump_charclass.cpp  flat_containers.h  graph_small_color_map.h  graph_undirected.h  hash_dynamic_bitset.h  insertion_ordered.h  intrinsics.h  match.hpp  multibit.h  multibit_build.cpp  multibit_compress.h  pack_bits.h  partial_store.h  partitioned_set.h  popcount.h  simd_types.h  simd_utils.h  ue2_graph.h  ue2string.cpp  ue2string.h  unaligned.h  unicode_set.h  uniform_ops.h
vectorscan-rs-sys/vectorscan/tools/hsbench/: CMakeLists.txt  data_corpus.cpp  engine_chimera.h  engine_hyperscan.cpp  huge.cpp  (+5 more)
vectorscan-rs-sys/vectorscan/unit/: CMakeLists.txt
vectorscan-rs-sys/vectorscan/util/: CMakeLists.txt  ExpressionParser.cpp  ExpressionParser.rl  cross_compile.cpp  database_util.cpp  expressions.cpp  ng_corpus_editor.cpp  ng_corpus_generator.cpp  ng_corpus_generator.h  ng_find_matches.cpp  string_util.h
vectorscan-rs/src/: error.rs  lib.rs  native.rs  shared.rs  wrapper.rs
(+74 files in other folders)
