[package]
name = "vectorscan-rs"
description = "Ergonomic bindings to the Vectorscan high-performance regex library"
readme = "README.md"

version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Specialize the build of Vectorscan to use available SIMD instructions on the build system's CPU.
# This will result in binary that is not portable to other CPUs.
simd_specialization = ["vectorscan-rs-sys/simd_specialization"]

# Specialize the build of Vectorscan for the microarchitecture of the build system's CPU.
# This will result in binary that is not portable to other CPUs.
cpu_native = ["vectorscan-rs-sys/cpu_native"]

# Enable all features that can improve speed but break binary portability.
fast_nonportable = ["cpu_native", "simd_specialization"]

[dependencies]
bitflags = "2.0"
foreign-types = "0.5"
thiserror = "1.0"
vectorscan-rs-sys = { version = "0.0.1", path = "../vectorscan-rs-sys" }
